fix(style): force verb mat icons to be visible

--- a/projects/word-weaver/src/scss/_shame.scss
+++ b/projects/word-weaver/src/scss/_shame.scss
@@ -72,6 +72,7 @@
 }
 
 .mat-icon {
+  overflow: visible !important;
   @each $name, $value in $font-sizes {
     &.icon-#{$name} {
       height: em($value) !important;
